Ensure page shadow travels with page.
And also that it disappears when overlapping with header.

--- a/index.css
+++ b/index.css
@@ -37,11 +37,26 @@ a:focus-visible, button:focus-visible, summary:focus-visible {
     
 }
 
+article:before, main:after {
+    -webkit-box-shadow: 0 -5px 5px black;
+            box-shadow: 0 -5px 5px black;
+    content: "";
+    color: black;
+    display: block;
+    grid-area: 1/1/2/2;
+    height: 3px;
+    width: 100vw;
+}
+
+article:before {
+    position: relative;
+    z-index: 0;
+}
+
 article {
     background-color: white;
     color: #494f6a;
     grid-area: 1/1/2/2;
-    padding: 0.25rem;
 
 }
 
@@ -133,6 +148,8 @@ header > div {
     max-width: -moz-fit-content;
     max-width: fit-content;
     padding: 1rem;
+    position: relative;
+    z-index: 1;
     
 
 }
@@ -209,18 +226,6 @@ ol, ul {
 
 main {
     display: grid;
-}
-
-
-main:after {
-    -webkit-box-shadow: 0 -5px 5px black;
-            box-shadow: 0 -5px 5px black;
-    content: "";
-    color: black;
-    display: block;
-    grid-area: 1/1/2/2;
-    height: 3px;
-    width: 100vw;
 }
 
 
@@ -385,6 +390,7 @@ summary::webkit-details-marker{
 }
 
 #about > section:first-child {
+    padding: 0.1rem 0.5rem;
     text-align: center;
     width: 100%;
 }
@@ -539,7 +545,7 @@ summary::webkit-details-marker{
 
  @keyframes contractArticle {
     0% {
-        transform: translateY(-60vh);
+        transform: translateY(-61vh);
     }
 
     100% {
@@ -553,7 +559,7 @@ summary::webkit-details-marker{
     }
 
     100% {
-        transform: translateY(-60vh);
+        transform: translateY(-61vh);
     }
 }
 
